# SPDX-FileCopyrightText: 2024 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[workspace]
members = ["minicbor-custom-enum"]

[package]
name = "mimi_content"
authors = ["Phoenix R&D GmbH <hello@phnx.im>"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
minicbor = { version = "2.2.1", features = ["std", "derive"] }
minicbor-derive = { version = "0.19" }
minicbor-custom-enum = { path = "./minicbor-custom-enum" }
hex = "0.4.3"
sha2 = "0.10.9"
thiserror = "2.0.11"

[[bench]]
name = "encoding"
harness = false

[dev-dependencies]
criterion = "0.5.1"