# SPDX-FileCopyrightText: 2024 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "mimi_content"
authors = ["Phoenix R&D GmbH <hello@phnx.im>"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[features]
serde = ["dep:serde", "serde_bytes"]

[dependencies]
minicbor = { version = "2.2.1", features = ["std", "derive"] }
minicbor-derive = { version = "0.19" }
sha2 = "0.10.9"
thiserror = "2.0.11"
num_enum = "0.7.6"
serde = { version = "1.0.228", optional = true }
serde_bytes = { version = "0.11.19", optional = true }

[[bench]]
name = "codec"
harness = false

[dev-dependencies]
ciborium = "0.2.2"
criterion = "0.8.2"
hex = "0.4.3"
minicbor-serde = { version = "0.6.2", features = ["std"] }
