# SPDX-FileCopyrightText: 2024 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "serde_list_macros"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
quote = "1.0.37"
syn = { version = "2.0.90", features = ["full", "extra-traits"] }

[lib]
proc-macro = true
